// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SubscriptionEventsBus stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "BusArn": {
      "Export": {
        "Name": "subscription-events-bus-CODE-arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "BusEA82B648",
          "Arn",
        ],
      },
    },
  },
  "Resources": {
    "BusEA82B648": {
      "Properties": {
        "Name": "subscription-events-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Events::EventBus",
    },
    "LogAllEventsLogGroup4318D40E": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/events/subscription-events-CODE",
        "RetentionInDays": 14,
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "LogAllEventsLogGroupPolicyResourcePolicy9387ED0D": {
      "Properties": {
        "PolicyDocument": {
          "Fn::Join": [
            "",
            [
              "{"Statement":[{"Action":["logs:PutLogEvents","logs:CreateLogStream"],"Condition":{"ArnEquals":{"aws:SourceArn":"",
              {
                "Fn::GetAtt": [
                  "LogAllEventsRule1A4D2528",
                  "Arn",
                ],
              },
              ""}},"Effect":"Allow","Principal":{"Service":"events.amazonaws.com"},"Resource":"",
              {
                "Fn::GetAtt": [
                  "LogAllEventsLogGroup4318D40E",
                  "Arn",
                ],
              },
              ""}],"Version":"2012-10-17"}",
            ],
          ],
        },
        "PolicyName": "subscriptioneventsbusCODELogAllEventsLogGroupPolicyFB9DBAB3",
      },
      "Type": "AWS::Logs::ResourcePolicy",
    },
    "LogAllEventsRule1A4D2528": {
      "Properties": {
        "Description": "Log all events on the subscription-events-CODE bus to CloudWatch Logs for debugging",
        "EventBusName": {
          "Ref": "BusEA82B648",
        },
        "EventPattern": {
          "account": [
            {
              "Ref": "AWS::AccountId",
            },
          ],
        },
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "LogAllEventsLogGroup4318D40E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`The SubscriptionEventsBus stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "BusArn": {
      "Export": {
        "Name": "subscription-events-bus-PROD-arn",
      },
      "Value": {
        "Fn::GetAtt": [
          "BusEA82B648",
          "Arn",
        ],
      },
    },
  },
  "Resources": {
    "BusEA82B648": {
      "Properties": {
        "Name": "subscription-events-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Events::EventBus",
    },
    "LogAllEventsLogGroup4318D40E": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/events/subscription-events-PROD",
        "RetentionInDays": 14,
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "LogAllEventsLogGroupPolicyResourcePolicy9387ED0D": {
      "Properties": {
        "PolicyDocument": {
          "Fn::Join": [
            "",
            [
              "{"Statement":[{"Action":["logs:PutLogEvents","logs:CreateLogStream"],"Condition":{"ArnEquals":{"aws:SourceArn":"",
              {
                "Fn::GetAtt": [
                  "LogAllEventsRule1A4D2528",
                  "Arn",
                ],
              },
              ""}},"Effect":"Allow","Principal":{"Service":"events.amazonaws.com"},"Resource":"",
              {
                "Fn::GetAtt": [
                  "LogAllEventsLogGroup4318D40E",
                  "Arn",
                ],
              },
              ""}],"Version":"2012-10-17"}",
            ],
          ],
        },
        "PolicyName": "subscriptioneventsbusPRODLogAllEventsLogGroupPolicy9A757C04",
      },
      "Type": "AWS::Logs::ResourcePolicy",
    },
    "LogAllEventsRule1A4D2528": {
      "Properties": {
        "Description": "Log all events on the subscription-events-PROD bus to CloudWatch Logs for debugging",
        "EventBusName": {
          "Ref": "BusEA82B648",
        },
        "EventPattern": {
          "account": [
            {
              "Ref": "AWS::AccountId",
            },
          ],
        },
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "subscription-events-bus",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "LogAllEventsLogGroup4318D40E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;
